# stage0-execution-guard-skill

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
src/: __init__.py  client.py  errors.py  guard.py
src/stage0_execution_guard/: __init__.py  client.py  errors.py  guard.py
tests/: test_import_and_guard.py
