[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stage0-execution-guard"
version = "1.2.1"
description = "A mandatory execution gatekeeper for AI agents - enforces Stage0 authorization before any action"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Stage0 Team", email = "support@signalpulse.org"}
]
maintainers = [
    {name = "Stage0 Team", email = "support@signalpulse.org"}
]
keywords = [
    "ai",
    "agent",
    "execution-guard",
    "authorization",
    "safety",
    "gatekeeper",
    "stage0",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dotenv = ["python-dotenv>=1.0.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://signalpulse.org"
Documentation = "https://signalpulse.org/docs"
Repository = "https://github.com/Starlight143/stage0-execution-guard-skill"
Issues = "https://github.com/Starlight143/stage0-execution-guard-skill/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
stage0_execution_guard = ["py.typed"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
